Added an error message to the form if the shape angles are not valid

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
       <canvas id="draw-area"></canvas>
 
+      <p id="status-message"></p>
+
       <form onsubmit="drawPolygon(event)" id="config">
         <h2>Configuration</h2>
         <div class="input-group">
